# urtc-linux-demo

./: CMakeLists.txt  README.md  RTCDefine.h  RTCEngineBase.h  RTCEngineFactory.cpp  RTCEngineFactory.h  RTCEventDefine.h  SdkUtil.cpp  SdkUtil.h  URTCConfig.cpp  URTCConfig.h  URTCCustomAudioSink.cpp  URTCCustomAudioSink.h  URTCEngineImpl.cc  URTCEngineImpl.h  URTCEventHandler.cpp  URTCEventHandler.h  URTCMsgHandler.cpp  URTCMsgHandler.h  main.cpp  msgqueue.cc  msgqueue.h  readme.md
doc/: UCloudRTC Linux SDK API.md  UCloudRtcLinuxSDK接口文档.docx  changeloglinux.md
docs/: readme.md
urtclib/interface/: UCloudRtcComDefine.h  UCloudRtcEngine.h  UCloudRtcErrorCode.h  UCloudRtcMediaDevice.h
